--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,7 @@ New features
     -   Store inactive rooms to disk
     -   Store rooms to disk on shutdown
 -   mod\_pep\_plus
+-   Persistence of PubSub data (applies to mod\_pubsub and mod\_pep\_plus)
 -   Asynchronous operations
 -   Busted for tests
 
