mod_muc_mam: Import mod_mam_muc from prosody-modules ba6466fa6823

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ New features
 -   Persistence of PubSub data (applies to mod\_pubsub and mod\_pep\_plus)
 -   Asynchronous operations
 -   Busted for tests
+-   mod\_muc\_mam (XEP-0313 in groupchats)
 
 0.10.0
 ======
