--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ New features
 -   Busted for tests
 -   mod\_muc\_mam (XEP-0313 in groupchats)
 -   mod\_vcard\_legacy (XEP-0398)
+-   mod\_vcard4 (XEP-0292)
 
 0.10.0
 ======
