mod_vcard_legacy: Responds to vcard-temp queries with translated vcard4 data

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ New features
 -   Asynchronous operations
 -   Busted for tests
 -   mod\_muc\_mam (XEP-0313 in groupchats)
+-   mod\_vcard\_legacy
 
 0.10.0
 ======
